[gd_scene load_steps=20 format=2]

[ext_resource path="res://enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://enemies/BaseCharacter.glb" type="PackedScene" id=2]
[ext_resource path="res://hud/LifeBarRed.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.790761
height = 1.5906

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "Punch"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "RecieveHit"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Idle-loop"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Run-loop"

[sub_resource type="AnimationNodeTransition" id=7]
input_count = 2
input_0/name = "live"
input_0/auto_advance = false
input_1/name = "dead"
input_1/auto_advance = false

[sub_resource type="AnimationNodeTimeScale" id=8]

[sub_resource type="AnimationNodeOneShot" id=9]

[sub_resource type="AnimationNodeTimeScale" id=10]

[sub_resource type="AnimationNodeOneShot" id=11]

[sub_resource type="AnimationNodeBlend2" id=12]

[sub_resource type="AnimationNodeTimeScale" id=13]

[sub_resource type="AnimationNodeBlendTree" id=14]
graph_offset = Vector2( 0, 306 )
nodes/Animation/node = SubResource( 6 )
nodes/Animation/position = Vector2( -420, 40 )
"nodes/Animation 2/node" = SubResource( 2 )
"nodes/Animation 2/position" = Vector2( -140, 200 )
"nodes/Animation 3/node" = SubResource( 3 )
"nodes/Animation 3/position" = Vector2( -140, 340 )
"nodes/Animation 4/node" = SubResource( 4 )
"nodes/Animation 4/position" = Vector2( -420, -100 )
"nodes/Animation 5/node" = SubResource( 5 )
"nodes/Animation 5/position" = Vector2( 600, 540 )
nodes/dead_transition/node = SubResource( 7 )
nodes/dead_transition/position = Vector2( 920, 420 )
nodes/hit_scale/node = SubResource( 8 )
nodes/hit_scale/position = Vector2( 40, 340 )
nodes/hit_shot/node = SubResource( 9 )
nodes/hit_shot/position = Vector2( 580, 300 )
nodes/output/position = Vector2( 1220, 420 )
nodes/punch_scale/node = SubResource( 10 )
nodes/punch_scale/position = Vector2( 40, 200 )
nodes/punch_shot/node = SubResource( 11 )
nodes/punch_shot/position = Vector2( 320, 160 )
nodes/run_blend/node = SubResource( 12 )
nodes/run_blend/position = Vector2( 20, -40 )
nodes/run_scale/node = SubResource( 13 )
nodes/run_scale/position = Vector2( -220, 40 )
node_connections = [ "output", 0, "dead_transition", "run_blend", 0, "Animation 4", "run_blend", 1, "run_scale", "hit_shot", 0, "punch_shot", "hit_shot", 1, "hit_scale", "dead_transition", 0, "hit_shot", "dead_transition", 1, "Animation 5", "punch_scale", 0, "Animation 2", "run_scale", 0, "Animation", "punch_shot", 0, "run_blend", "punch_shot", 1, "punch_scale", "hit_scale", 0, "Animation 3" ]

[sub_resource type="CylinderShape" id=15]
radius = 1.72031

[sub_resource type="CylinderShape" id=16]
radius = 12.0

[node name="Enemy" type="KinematicBody" groups=[
"enemy",
]]
transform = Transform( 0.65, 0, 0, 0, 0.65, 0, 0, 0, 0.65, 0, 0, 0 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5876, 0.233349 )
shape = SubResource( 1 )

[node name="Pivot" type="Spatial" parent="."]

[node name="BaseCharacter" parent="Pivot" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 14 )
anim_player = NodePath("../Pivot/BaseCharacter/AnimationPlayer")
active = true
parameters/dead_transition/current = 0
parameters/hit_scale/scale = 1.0
parameters/hit_shot/active = false
parameters/punch_scale/scale = 1.0
parameters/punch_shot/active = false
parameters/run_blend/blend_amount = 0.0
parameters/run_scale/scale = 1.0

[node name="AttackArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="AttackArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 15 )

[node name="TargetArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="TargetArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 16 )

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="PunchTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="LifeBarRed" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.707107, 0.707107, -3.09086e-08, 0, -4.37114e-08, -1, -0.707107, 0.707107, -3.09086e-08, 0, 3.39575, 0 )

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="PunchTimer" to="." method="_on_PunchTimer_timeout"]

[editable path="Pivot/BaseCharacter"]
